# Battlesnake-Curunir

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
benches/: my_benchmark.rs
src/: constants.rs  decision.rs  draw.rs  functions.rs  game_objects.rs  lib.rs  macros.rs  main.rs  requests.rs  structures.rs  tests.rs
src/game_objects/: decision.rs  engine.rs  evaluator.rs  mapper.rs  simulator.rs
src/requests/: index_response.rs  input_board.rs  input_game.rs  input_ruleset.rs  input_snake.rs  move_request.rs  move_response.rs
src/structures/: battlesnake.rs  board.rs  board_order.rs  coordinate.rs  game.rs  mod.rs  route.rs  (+1 more)
testdata/: better_than_dead-01-dead.json  better_than_food-01-close.json  better_than_food-01-far.json  better_than_long-01-long.json  body_collision-01-after.json  body_collision-01-before.json  check_area_closed-01.json  check_area_closed-02.json  check_area_closed-03.json  check_area_open-01.json  check_area_open-02.json  check_area_route-02.json  check_area_route-03.json  compare_to_advantage-01-better.json  compare_to_advantage-01-worse.json  double_headon_collision-01-after.json  double_headon_collision-01-before.json  eat-01-after.json  eat-01-before.json  empty_board-11x11.json  find_closest_food_one-01.json  find_closest_food_two-01.json  find_weaker_snake_none-01.json  find_weaker_snake_one-01.json  food-01.json  headon_collision-01-after.json  headon_collision-01-before.json  move-01-after.json  no_change-01-after.json  open_directions_2-01.json  out_of_bounds-01-before.json  out_of_health-01-after.json  out_of_health-01-before.json  simple-02.json  test_board-02.json  test_board-03.json  test_board-04.json  test_board-05.json  test_board-06.json
(+6 files in other folders)
