[package]
name = "curunir"
version = "0.2.0"
authors = ["Kyle Stang <kylestang.ks@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/kylestang/battlesnake-curunir"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
codegen-units = 1

[[bench]]
name = "my_benchmark"
harness = false

[dependencies]
actix-web = "3"
actix-rt = "1.1.1"
criterion = "0.3"
image = "0.23.12"
serde = "1.0.123"
serde_json = "1.0"
