[package]
name = "curunir"
version = "0.3.0"
authors = ["Kyle Stang <kylestang.ks@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/kylestang/battlesnake-curunir"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
codegen-units = 1

[[bench]]
name = "my_benchmark"
harness = false

[dependencies]
actix-web = "3"
actix-rt = "2.3.0"
criterion = "0.3"
image = "0.23.14"
serde = "1.0.130"
serde_json = "1.0"
